[package]
name = "ql2"
description = "RethinkDB protocol"
version = "2.0.1-alpha.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-rethinkdb/ql2"
documentation = "https://docs.rs/ql2"
readme = "README.md"
keywords = ["database", "rethinkdb", "reql", "ql2"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[lib]
doctest = false

[dependencies]
prost = "0.7.0"

[build-dependencies]
prost-build = "0.7.0"
